style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");

:root {
  --primary-text-color-red: #e12454;
  --primary-text-color-green: #77bb3c;
  --secondary-text-color: gray;
  --tertiary-text-color: #314351;
  --primary-bg-color: #f4f4f4;
  --secondary-bg-color: #e12454;
  --tertiary-bg-color: #77bb3c;
  --tertiary-bg-color-blue: #314351;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 1rem 0rem;
}

ul {
  margin-left: 1rem;
}

/* div {
  padding: 0rem 0.15rem;
} */

a {
  text-decoration: none;
  color: black;
}

p {
  line-height: 1.75rem;
}

select {
  height: 3rem;
}

html {
  font-size: 16px;
  font-family: "Poppins", sans-serif;
}

body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  min-width: 30rem;
}

main {
  padding: 0.5rem 1.5rem 0 1.5rem;
  /* min-width: 30rem; */
}

header {
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.07);
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.75rem 2rem;
}

h2 {
  color: var(--tertiary-text-color);
  font-size: 2.35rem;
  font-weight: 800;
  margin-bottom: 0.5rem;
}

hr {
  margin: 1rem 0;
  border: 2px dashed black;
  border-style: none none dashed;
  color: #fff;
  background-color: #fff;
}

header a,
footer a {
  color: inherit;
}

textarea {
  width: 100%;
  resize: none;
  padding-top: 1rem;
}

form input[type="submit"] {
  display: block;
  background-color: var(--secondary-bg-color);
  width: 100%;
  height: 3rem;
  border: none;
  border-radius: 0.3rem;
  color: white;
  font-size: 1.1rem;
}

form input[type="submit"]:hover {
  cursor: pointer;
}

footer {
  display: flex;
  flex-direction: column;
  margin-top: auto;
  margin: 0 1.5rem;
}

#logo {
  display: flex;
  height: 6rem;
  margin-left: 7rem;
}

#logo img {
  height: 6rem;
  width: 5rem;
}

#nav_area {
  width: 35rem;
  display: flex;
  justify-content: space-between;
  margin-right: 10rem;
}

#nav_area a {
  font-size: 1.15rem;
}

#menu_bar {
  display: none;
  width: 2rem;
}

/* #facebook_icon {
  color: #4267b2;
  width: 2rem;
} */

#about_us_section {
  width: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr;
  padding: 0 2rem 4rem 2rem;
}

#about_us_right {
  display: flex;
  flex-direction: column;
  padding-left: 2.5rem;
}

#about_us_right h2 {
  color: var(--primary-text-color-red);
}

#about_us_right p {
  color: var(--tertiary-text-color);
  margin: 0.3rem 0;
}

#about_us_right .action_btn {
  margin-top: 1rem;
  width: 8rem;
}

#contact_us {
  text-align: center;
}

#appointment_form label {
  display: block;
}

#appointment_form div {
  margin-bottom: 0.75rem;
}

#contact_method_field label {
  display: inline;
  margin-right: 1rem;
}

#services {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(22rem, 0.98fr));
  gap: 2rem;
  /* width: fit-content; */
  margin: 3rem auto;
}

#footer_top {
  display: grid;
  grid-template-columns: 1fr 1fr;
  border-bottom: solid 0.4rem var(--secondary-bg-color);
}

#newsletter_subscribe_left {
  background-color: var(--tertiary-bg-color);
  padding: 4rem;
  color: white;
}

#newsletter_subscribe_left h2 {
  color: white;
}

#newsletter_subscribe_left h3 {
  font-size: 1.75rem;
  margin-top: 3rem;
}

#newsletter_subscribe_right img {
  width: 100%;
  height: 100%;
}

#footer_bottom,
#footer_bottom_mobile {
  background-color: #182632;
  color: white;
}

#footer_bottom {
  justify-content: space-between;
  display: flex;
  padding: 3rem 6rem 1rem 6rem;
}

.mission_visions {
  display: flex;
  align-items: center;
  margin-bottom: 1rem;
}

.mission_vision_font {
  padding: 0.5rem;
  border-radius: 0.33rem;
  background-color: var(--primary-text-color-green);
}

.mission_vision_texts {
  margin-left: 1.5rem;
}

.mission_vision_texts h4 {
  color: var(--primary-text-color-green);
  margin-bottom: 0.5rem;
  font-size: 1.5rem;
  font-weight: 600;
}

.mission_vision_texts p {
  margin-top: 0rem;
}

.action_btn {
  background-color: var(--secondary-bg-color);
  padding: 1rem;
  border-radius: 0.25rem;
  color: white;
  font-weight: 500;
  text-decoration: none;
}

.logo_social {
  display: flex;
  flex-direction: column;
}

.logo_social .footer_logo {
  margin-bottom: 2rem;
}

.footer_logo,.footer_contact, .footer_quick_links {
  width: fit-content;
}

.footer_logo img{
  height: 5rem;
  width: 4rem;
}

#footer_bottom h3,#footer_bottom_mobile h3 {
  color: var(--primary-text-color-red);
  margin-bottom: 3rem;
}

#footer_bottom nav,#footer_bottom_mobile nav {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

#footer_bottom_mobile {
  display: none;
}

.social_media p {
  font-size: 1.25rem;
  color: var(--primary-text-color-red);
}

.social_media_icons {
  display: flex;
  justify-content: flex-start;
}

.social_media_icons img {
  width:3rem;
}

.footer_quick_links {
  display: flex;
  flex-direction: column;
}

.footer_contact {
  display: flex;
  flex-direction: column;
}

.footer_quick_links a,
.footer_contact a {
  margin-bottom: 1rem;
}

.footer_newsletter p {
  color: white;
}

.footer_newsletter .newsletter_subscribe_form input[type="text"] {
  width: 15em;
}

.selected_nav_item {
  color: var(--primary-text-color-red);
}

.top_section {
  background-size: cover;
    background-repeat: no-repeat;
    height: 30rem;
    display: flex;
    align-items: center;
    background-position-x: 0, 30rem;
    background-position-y: 0, -15rem;
}

.top_section h1 {
  margin-left: 10rem;
}

.form_row {
  width: 100%;
  display: flex;
  justify-content: space-between;
  /* margin-bottom: 2rem; */
}

.form_field {
  display: flex;
  flex-direction: column;
  margin-bottom: 2rem;
}

.form_field:not(.form_row) {
  width: 50%;
}

.form_field label {
  margin-bottom: 1rem;
}

.form_field input,
textarea {
  border: none;
  border-radius: 0.3rem;
  padding-left: 0.5rem;
  background-color: var(--primary-bg-color);
}

.form_field input {
  /* width: 17rem; */
  height: 3rem;
}

.form_row div:nth-child(1) {
  margin-right: 1rem;
}

.newsletter_subscribe_form {
  display: flex;
  background-color: inherit;
  padding: 0;
}

.newsletter_subscribe_form input[type="text"] {
  height: 3.5rem;
  width: 22rem;
  padding-left: 1rem;
  border-top-left-radius: 0.3rem;
  border-bottom-left-radius: 0.3rem;
  border: none;
}

.newsletter_subscribe_form input[type="submit"] {
  background-image: url("images/paper-plane-solid.svg");
  background-repeat: no-repeat;
  background-size: 40%;
  background-position: center;
  margin-left: 0;
  height: 3.5rem;
  width: 4rem;
  border: none;
  background-color: var(--secondary-bg-color);
  color: white; /*TODO: Remove after replacing text with font */
  padding: 0.25rem;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

#breadcrumb {
  display: flex;
  align-items: center;
  margin-top: 0.5rem;
  font-size: 1.15rem;
}

#breadcrumb a,#breadcrumb img {
  color: red;
}

#breadcrumb a:hover {
  text-decoration: underline;
  
}

.chevron_font {
  width: 0.5rem;
  margin: 0 0.25rem;
}

.page_form {
  width: min(47rem,90%);
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 3rem;
  border: 2px solid gray;
  border-radius: .3rem;
  text-align: left;
  padding: 2rem;
}

@media (max-width: 1300px) {
  #logo {
    margin-left: 2rem;
  }

  #nav_area {
    margin-right: 2rem;
  }

  #about_us_section {
    padding: 0 0 2rem 0;
  }

  
  #about_us_left {
    /* background-size: 100%; */
    display: flex;
    align-items: center;
  }

  #about_us_left img {
    width: 100%;
  }
}

@media (max-width: 950px) {

  #about_us_section {
    display: flex;
    flex-direction: column;
  }

  #footer_bottom {
    flex-direction: column;
    flex-wrap: wrap;
    height: 30rem;
  }
}

@media (max-width: 750px) {
  html {
    font-size: 12px;
  }

  header {
    position: relative;
    height: 8rem;
  }

  #menu_bar {
    display: block;
  }

  #nav_area {
    display: none;
    flex-direction: column;
    position: absolute;
    right: 0;
    top: 5.5rem;
    width: fit-content;
    background-color: rgb(236, 236, 236);
    /* color: white; */
    padding: 0.25rem 0.5rem;
  }

  #footer_top {
    display: flex;
    flex-direction: column-reverse;
    align-items: center;
  }

  #newsletter_subscribe_left {
    width: 100%;
    height: 50%;
  }

  #footer_bottom {
    display: none;
  }

  #footer_bottom_mobile {
    display: grid;
    grid-template-areas: 
    "logo contact"
    "links social"
    "newsletter newsletter"
    ;
    padding: 1rem 1rem 3.5rem 1rem;
  }
  
  #footer_bottom_mobile h3 {
    margin-bottom: 1.5rem;
  }
  
  #footer_bottom_mobile .footer_newsletter {
    grid-area: newsletter;
  }

  #footer_bottom_mobile .newsletter_subscribe_form input[type="text"] {
    width: 21rem;
  }

  main .top_section {
    background-position: center !important;
  }

  .mission_visions {
    flex-direction: column;
    align-items: flex-start;
  }

  .mission_vision_font {
    margin-bottom: 0.5rem;
  }

  .mission_vision_texts {
    margin-left: 0;
  }
  
}

@media (max-width: 550px) {
  main {
    padding: 0.5rem 0.25rem 0 0.25rem;
  }

  .form_row {
    flex-direction: column;
  }

  .form_field:not(.form_row),
  .form_field {
    width: 100%;
  }
}

